syntax = "proto3";

package com.github.zenika.codyglot.router.service;
option go_package = "service";

import "google/api/annotations.proto";

service Router {
  rpc execute(ExecuteRequest) returns (ExecuteResponse) {
    option (google.api.http) = {
      post: "/execute"
      body: "*"
    };
  }
  rpc languages(LanguagesRequest) returns (LanguagesResponse) {
    option (google.api.http) = {
      get: "/languages"
    };
  }
}

message ExecuteRequest {
  string language = 1; // Language of the code to execute
  string code = 2; // Code to execute
  bytes stdIn = 3; // Content sent on the standard input
}

message ExecuteResponse {
  uint32 exitCode = 1; // Exit code of the program
  bytes stdOut = 2; // Content received on the standard output
  bytes stdErr = 3; // Content received on the standard error output
}

message LanguagesRequest {
}

message LanguagesResponse {
  repeated string languages = 1; // Available languages
}
